--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -42,9 +42,9 @@
 
 		<StackPanel Orientation="Horizontal"
 					HorizontalAlignment="Center"
-					Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					Grid.ColumnSpan="2">
 			<TextBlock Text="Select your account region " 
+					   Focusable="True"
 					   VerticalAlignment="Center"/>
 			<RadioButton Content="EU"
 						 Margin="2"
@@ -64,25 +64,39 @@
 
 			<Button Content="{x:Static root:PluginResources.Auth_SSO}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
+					Command="{Binding Auth0SignInCommand}"
+					ToolTip="{x:Static root:PluginResources.Auth_Cloud_SSO_Tooltip}"
+					Cursor="Hand"
+					Width="176"
+					Height="32"
+					Margin="0 4"/>
+			<Button Content="{x:Static root:PluginResources.Auth_Cloud_FSSO}"
+					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudSSO}"
+					ToolTip="{x:Static root:PluginResources.Auth_Cloud_FSSO_ToolTip}"
 					Cursor="Hand"
-					Width="200"
-					Margin="0 8"/>
+					Width="176"
+					Height="32"
+					Margin="0 4" />
 			<Button Content="{x:Static root:PluginResources.Auth_Cloud_Credentials}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudCredentials}"
+					ToolTip="{x:Static root:PluginResources.Auth_Cloud_Credentials_ToolTip}"
 					Cursor="Hand"
-					Width="200"
-					Margin="0 8" />
+					Width="176"
+					Height="32"
+					Margin="0 4" />
 			<Button Content="{x:Static root:PluginResources.Auth_Cloud_APICredentials}"
 					Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Command="{Binding SelectAuthenticationTypeCommand}"
 					CommandParameter="{x:Static root:AuthenticationType.CloudAPI}"
+					ToolTip="{x:Static root:PluginResources.Auth_Cloud_APICredentials_ToolTip}"
 					Cursor="Hand"
-					Width="200"
-					Margin="0 8" />
+					Width="176"
+					Height="32"
+					Margin="0 4" />
 		</StackPanel>
 
 		<Grid Grid.Row="2"
@@ -118,7 +132,7 @@
 			<!-- SSO Connection code -->
 			<TextBlock Grid.Row="0"
 					   Grid.Column="0"
-					   Text="{x:Static root:PluginResources.Auth_Cloud_SSO_ConnectionCode}"
+					   Text="{x:Static root:PluginResources.Auth_Cloud_FederatedSSO_ConnectionCode}"
 					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
 					   Visibility="{Binding IsSSOSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					   VerticalAlignment="Center"
@@ -128,7 +142,7 @@
 					 Grid.ColumnSpan="2"
 					 Text="{Binding ConnectionCode, UpdateSourceTrigger=PropertyChanged}"
 					 Style="{StaticResource WatermarkTextBox}"
-					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_SSO_ConnectionCode}"
+					 controls:TextBoxWatermarkHelper.WatermarkText="{x:Static root:PluginResources.Auth_Cloud_FederatedSSO_ConnectionCode}"
 					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
 					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=ConnectionCode, Type={x:Type viewModel:CloudCredentialsViewModel}}"
 					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
@@ -222,7 +236,8 @@
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 				Cursor="Hand"
-				Width="200"
-				Margin="0 32 0 8" />
+				Width="176"
+				Height="32"
+				Margin="0 32 0 4" />
 	</Grid>
 </UserControl>
