--- a/LanguageWeaverProvider/View/CredentialsMainView.xaml
+++ b/LanguageWeaverProvider/View/CredentialsMainView.xaml
@@ -5,6 +5,7 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:root="clr-namespace:LanguageWeaverProvider"
 		xmlns:local="clr-namespace:LanguageWeaverProvider.ViewModel"
+		xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 		xmlns:edgeView="clr-namespace:LanguageWeaverProvider.View.Edge"
 		xmlns:cloudView="clr-namespace:LanguageWeaverProvider.View.Cloud"
 		xmlns:edgeViewModel="clr-namespace:LanguageWeaverProvider.ViewModel.Edge"
@@ -30,6 +31,8 @@
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBoxResources.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/TextBlockResources.xaml" />
+				<ResourceDictionary Source="../Controls/ProgressIndicator.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 
 			<Style TargetType="Image">
@@ -37,9 +40,15 @@
 						Value="HighQuality" />
 			</Style>
 
+			<Style TargetType="ToolTip">
+				<Setter Property="Placement"
+						Value="Left" />
+			</Style>
+
 			<converters:InvertedBoolean x:Key="InvertedBoolean" />
-			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 			<converters:EnumToVisibilityConverter x:Key="EnumToVisibility" />
+			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
 
 			<DataTemplate DataType="{x:Type cloudViewModel:CloudCredentialsViewModel}">
 				<cloudView:CloudCredentialsView />
@@ -51,283 +60,245 @@
 		</ResourceDictionary>
 	</Window.Resources>
 
-	<Border>
+	<Border Background="#f0f0f0">
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="*" />
+				<RowDefinition Height="Auto" />
+				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
-
+			<!-- Header Image -->
 			<Image Grid.Row="0"
-				   Source="../Resources/lwMainLogo.png"
-				   Margin="48 24 48 0" />
+				   Source="../Resources/lwHeader.png"
+				   Height="60"
+				   Margin="48 12 48 0" />
 
+			<!-- Authentication Section -->
 			<Border Grid.Row="1"
 					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
 					Background="#ffffff"
-					CornerRadius="2"
-					Margin="24"
-					Padding="12 24 12 12">
+					BorderBrush="#c0c0c0"
+					BorderThickness="1"
+					CornerRadius="8"
+					Margin="24 12 24 24"
+					Padding="12">
 				<Border.Effect>
 					<DropShadowEffect ShadowDepth="0"
 									  Color="#d4d4d4"
 									  Opacity="1" />
 				</Border.Effect>
+
 				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="*" />
-						<RowDefinition Height="Auto" />
-					</Grid.RowDefinitions>
+					<Grid Visibility="{Binding CurrentActionMessage, Converter={StaticResource EmptyStringToVisibilityConverter}, ConverterParameter=Inverted}">
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="*" />
+							<RowDefinition Height="Auto" />
+						</Grid.RowDefinitions>
 
-					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudCredentials}}"
-							 Text="You've chosen User Credentials Authentication. Please enter your email and password to proceed."
-							 FontSize="14"
-							 HorizontalAlignment="Center" />
+						<!-- Cloud and Edge Authentication Options -->
+						<TextBlock Grid.Row="0"
+								   Text="{x:Static root:Constants.PluginNameCloud}"
+								   Style="{StaticResource Sdl.TextBlock.TitleStyle}"
+								   HorizontalAlignment="Center"
+								   Visibility="{Binding IsCloudSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+								   TextWrapping="Wrap"
+								   FontSize="18"
+								   FontWeight="DemiBold"
+								   Focusable="True"
+								   Margin="0 0 0 8" />
 
-					<StackPanel Grid.Row="0"
-								Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudAPI}}">
-						<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-								 Cursor="Arrow"
-								 Text="You've chosen Client Secret Authentication. Please provide the generated client secret for access."
-								 FontSize="14"
-								 HorizontalAlignment="Center" />
-						<Button Style="{StaticResource Sdl.Button.HyperLinkStyle}"
-								Command="{Binding OpenHyperlinkCommand}"
-								CommandParameter="{x:Static root:Constants.LanguageWeaverEUPortal}"
-								HorizontalAlignment="Left"
-								Cursor="Hand"
-								Margin="16 8 16 0">
-							<Button.Content>
-								<TextBlock Text="Please note that only administrators can retrieve the Client ID and Client Secret."
-										   TextWrapping="Wrap" />
-							</Button.Content>
-						</Button>
-					</StackPanel>
+						<TextBlock Grid.Row="0"
+								   Text="{x:Static root:Constants.PluginNameEdge}"
+								   Style="{StaticResource Sdl.TextBlock.TitleStyle}"
+								   Visibility="{Binding IsEdgeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   FontSize="18"
+								   FontWeight="DemiBold"
+								   Focusable="True"
+								   Margin="0 0 0 8" />
 
-					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.EdgeCredentials}}"
-							 Text="You've chosen User Credentials Authentication. Please enter your host, email and password to proceed."
-							 FontSize="14"
-							 HorizontalAlignment="Center" />
+						<!-- Authentication Type Information -->
+						<TextBlock Grid.Row="1"
+								   Text="{x:Static root:PluginResources.MainView_AuthMethods_HelpMessage}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   Visibility="{Binding ProviderView.IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
 
-					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.EdgeApiKey}}"
-							 Text="You've chosen User API Key Authentication. Please enter your API Key for access."
-							 FontSize="14"
-							 HorizontalAlignment="Center" />
+						<!-- Specific Authentication Type Details -->
+						<TextBlock Grid.Row="1"
+								   Text="You've chosen User Credentials Authentication. Please enter your email and password to proceed."
+								   Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudCredentials}}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
 
-					<TextBox Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Text="{x:Static root:PluginResources.MainView_AuthMethods_HelpMessage}"
-							 Visibility="{Binding ProviderView.IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
-							 FontSize="14" 
-							 HorizontalAlignment="Center"/>
+						<StackPanel Grid.Row="1"
+									Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.CloudAPI}}">
+							<TextBlock Text="You've chosen API Credentials Authentication. Please provide the generated client secret for access."
+									   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+									   HorizontalAlignment="Left"
+									   TextWrapping="Wrap"
+									   Focusable="True"
+									   MaxWidth="999"
+									   FontSize="12"
+									   Margin="0 4" />
+							<Button Style="{StaticResource Sdl.Button.HyperLinkStyle}"
+									Command="{Binding OpenHyperlinkCommand}"
+									CommandParameter="{x:Static root:Constants.LanguageWeaverEUPortal}"
+									HorizontalAlignment="Left"
+									Cursor="Hand"
+									Margin="0 0 16 0">
+								<Button.Content>
+									<TextBlock Text="Please note that only administrators can retrieve the Client ID and Client Secret."
+											   TextWrapping="Wrap" />
+								</Button.Content>
+							</Button>
+						</StackPanel>
 
-					<StackPanel Grid.Row="1">
-						<ContentControl Content="{Binding ProviderView}"
-										Focusable="False"
-										Margin="0 8"
-										Grid.Row="1"
-										VerticalAlignment="Bottom" />
+						<TextBlock Grid.Row="1"
+								   Text="You've chosen User Credentials Authentication. Please enter your host, email and password to proceed."
+								   Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.EdgeCredentials}}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
 
-						<Button Content="{x:Static root:PluginResources.MainView_AuthMethods_BackBttn}"
-								Command="{Binding BackCommand}"
-								Style="{StaticResource Sdl.Button.SecondaryStyle}"
-								Cursor="Hand"
-								Width="200"
-								Grid.Row="2"
-								VerticalAlignment="Bottom"
-								Margin="0 0 0 8" />
-					</StackPanel>
+						<TextBlock Grid.Row="1"
+								   Text="You've chosen User API Key Authentication. Please enter your API Key for access."
+								   Visibility="{Binding ProviderView.AuthenticationType, Converter={StaticResource EnumToVisibility}, ConverterParameter={x:Static root:AuthenticationType.EdgeApiKey}}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
+
+						<!-- Content and Back Button -->
+						<StackPanel Grid.Row="3">
+							<ContentControl Content="{Binding ProviderView}"
+											Focusable="False"
+											Margin="0 8"
+											VerticalAlignment="Bottom" />
+
+							<Button Content="{x:Static root:PluginResources.MainView_AuthMethods_BackBttn}"
+									Command="{Binding BackCommand}"
+									Style="{StaticResource Sdl.Button.SecondaryStyle}"
+									Cursor="Hand"
+									Width="176"
+									Height="32"
+									VerticalAlignment="Bottom"
+									Margin="0 0 0 8" />
+						</StackPanel>
+					</Grid>
+					
+					<controls:ProgressIndicator Text="{Binding CurrentActionMessage}"
+												Visibility="{Binding CurrentActionMessage, Converter={StaticResource EmptyStringToVisibilityConverter}}" 
+												HorizontalAlignment="Center"
+												VerticalAlignment="Center"/>
 				</Grid>
 			</Border>
 
+			<!-- Service Selection Section -->
 			<Border Grid.Row="1"
 					Visibility="{Binding IsServiceSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
 					IsEnabled="{Binding IsUserAttemptingLogin, Converter={StaticResource InvertedBoolean}}"
 					Background="#ffffff"
-					CornerRadius="4"
-					Margin="24"
-					Padding="12 24 12 12">
+					BorderBrush="#c0c0c0"
+					BorderThickness="1"
+					CornerRadius="8"
+					Margin="24 12 24 24"
+					Padding="12">
 				<Border.Effect>
 					<DropShadowEffect ShadowDepth="0"
 									  Color="#d4d4d4"
 									  Opacity="1" />
 				</Border.Effect>
+
 				<Grid>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
 						<RowDefinition Height="*" />
+						<RowDefinition Height="Auto" />
 					</Grid.RowDefinitions>
 
-					<TextBox Grid.Row="0"
-							 Style="{StaticResource Sdl.TextBox.BorderlessReadOnlyStyle}"
-							 Cursor="Arrow"
-							 Text="{x:Static root:PluginResources.MainView_HelpMessage}"
-							 FontSize="14"
-							 HorizontalAlignment="Center" />
+					<StackPanel>
+						<TextBlock Text="{x:Static root:PluginResources.MainView_HelpMessage}"
+								   Style="{StaticResource Sdl.TextBlock.TitleStyle}"
+								   HorizontalAlignment="Center"
+								   TextWrapping="Wrap"
+								   FontSize="18"
+								   FontWeight="DemiBold"
+								   Focusable="True"
+								   Margin="0 0 0 8" />
 
-					<StackPanel Grid.Row="1"
-								VerticalAlignment="Bottom">
-						
+						<TextBlock Text="{x:Static root:PluginResources.MainView_Buttons_LWCloud_ToolTip}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   HorizontalAlignment="Left"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
+
+						<TextBlock Text="{x:Static root:PluginResources.MainView_Buttons_LWEdge_ToolTip}"
+								   Style="{StaticResource Sdl.TextBlock.InformationTextStyle}"
+								   HorizontalAlignment="Left"
+								   TextWrapping="Wrap"
+								   Focusable="True"
+								   MaxWidth="999"
+								   FontSize="12"
+								   Margin="0 4" />
+					</StackPanel>
+
+					<!-- Add more TextBlock elements for additional information -->
+
+					<StackPanel Grid.Row="1">
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWCloud}"
-								ToolTip="{x:Static root:PluginResources.MainView_Buttons_LWCloud_ToolTip}"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
 								CommandParameter="{x:Static root:Constants.CloudService}"
 								Cursor="Hand"
-								Width="200"
-								Margin="0 8" />
+								Width="176"
+								Height="32"
+								Margin="0 4" />
 
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_LWEdge}"
 								Style="{StaticResource Sdl.Button.PrimaryStyle}"
 								Command="{Binding SelectLanguageWeaverServiceCommand}"
 								CommandParameter="{x:Static root:Constants.EdgeService}"
 								Cursor="Hand"
-								Width="200"
-								Margin="0 8">
-							<Button.ToolTip>
-								<ToolTip HorizontalOffset="260"
-										 VerticalOffset="-24">
-									<ToolTip.Content>
-										<TextBlock Text="{x:Static root:PluginResources.MainView_Buttons_LWEdge_ToolTip}"
-												   TextWrapping="Wrap"
-												   MaxWidth="240" />
-									</ToolTip.Content>
-								</ToolTip>
-							</Button.ToolTip>
-						</Button>
+								Width="176"
+								Height="32"
+								Margin="0 4" />
 
 						<Button Content="{x:Static root:PluginResources.MainView_Buttons_Exit}"
 								Command="{Binding CloseCommand}"
 								Style="{StaticResource Sdl.Button.SecondaryStyle}"
 								Cursor="Hand"
-								Width="200"
+								Width="176"
+								Height="32"
 								Margin="0 8" />
 					</StackPanel>
 				</Grid>
 			</Border>
-
-			<Grid Grid.Row="1"
-				  VerticalAlignment="Bottom"
-				  Visibility="{Binding IsUserAttemptingLogin, Converter={StaticResource BooleanToVisibilityConverter}}">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="*" />
-				</Grid.RowDefinitions>
-
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="*" />
-					<ColumnDefinition Width="Auto" />
-					<ColumnDefinition Width="*" />
-				</Grid.ColumnDefinitions>
-
-				<Border BorderThickness="0 1 0 0"
-						BorderBrush="#D3D3D3"
-						VerticalAlignment="Bottom"
-						Grid.Column="0"
-						Grid.Row="1"
-						Height="22"
-						Margin="0 0 0 0"
-						Grid.ColumnSpan="3">
-					<Rectangle>
-						<Rectangle.Fill>
-							<LinearGradientBrush StartPoint="0,0"
-												 EndPoint="1,0">
-								<GradientStop x:Name="gradientTransparent"
-											  Color="Transparent"
-											  Offset="1" />
-								<GradientStop x:Name="gradientColored"
-											  Color="#008080"
-											  Offset="0" />
-							</LinearGradientBrush>
-						</Rectangle.Fill>
-					</Rectangle>
-
-					<Border.Triggers>
-						<EventTrigger RoutedEvent="FrameworkElement.Loaded">
-							<BeginStoryboard>
-								<Storyboard RepeatBehavior="Forever">
-
-									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="-0.5"
-													 Duration="0:0:0" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientColored"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="-0.5"
-													 Duration="0:0:0" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="1.5"
-													 Duration="0:0:0.5" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientColored"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="1.5"
-													 BeginTime="0:0:0.5"
-													 Duration="0:0:0.5" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientColored"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="-0.5"
-													 BeginTime="0:0:1"
-													 Duration="0:0:0" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="-0.5"
-													 BeginTime="0:0:1"
-													 Duration="0:0:0" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientColored"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="1.5"
-													 BeginTime="0:0:1"
-													 Duration="0:0:0.5" />
-
-									<DoubleAnimation Storyboard.TargetName="gradientTransparent"
-													 Storyboard.TargetProperty="Offset"
-													 From="-0.5"
-													 To="1.5"
-													 BeginTime="0:0:1.5"
-													 Duration="0:0:0.5" />
-								</Storyboard>
-
-							</BeginStoryboard>
-						</EventTrigger>
-					</Border.Triggers>
-				</Border>
-
-				<TextBlock Text="{Binding CurrentActionMessage}"
-						   FontWeight="DemiBold"
-						   Grid.Row="1"
-						   Grid.Column="2"
-						   HorizontalAlignment="Right"
-						   VerticalAlignment="Bottom"
-						   Margin="0 0 24 3">
-					<TextBlock.Effect>
-						<DropShadowEffect ShadowDepth="0"
-										  Color="#f4f4f4"
-										  Opacity="3"
-										  BlurRadius="7" />
-					</TextBlock.Effect>
-				</TextBlock>
-
-			</Grid>
 		</Grid>
 	</Border>
+
 </Window>
