--- a/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Edge/EdgeCredentialsView.xaml
@@ -44,8 +44,9 @@
 				CommandParameter="{x:Static root:AuthenticationType.EdgeSSO}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
 				Cursor="Hand"
-				Width="200"
-				Margin="0 8" />
+				Width="176"
+				Height="32"
+				Margin="0 4" />
 
 		<Button Grid.Row="1"
 				Content="{x:Static root:PluginResources.Auth_Edge_UserCredentials}"
@@ -54,8 +55,9 @@
 				CommandParameter="{x:Static root:AuthenticationType.EdgeCredentials}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
 				Cursor="Hand"
-				Width="200"
-				Margin="0 8" />
+				Width="176"
+				Height="32"
+				Margin="0 4" />
 
 		<Button Grid.Row="2"
 				Content="{x:Static root:PluginResources.Auth_Edge_APIKey}"
@@ -64,8 +66,9 @@
 				CommandParameter="{x:Static root:AuthenticationType.EdgeApiKey}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=Inverted}"
 				Cursor="Hand"
-				Width="200"
-				Margin="0 8" />
+				Width="176"
+				Height="32"
+				Margin="0 4" />
 
 		<TextBox Grid.Row="3"
 				 Grid.Column="1"
@@ -115,7 +118,8 @@
 				Style="{StaticResource Sdl.Button.PrimaryStyle}"
 				Visibility="{Binding IsAuthenticationTypeSelected, Converter={StaticResource BooleanToVisibilityConverter}}"
 				Cursor="Hand"
-				Width="200"
-				Margin="0 8 0 8" />
+				Width="176"
+				Height="32"
+				Margin="0 4" />
 	</Grid>
 </UserControl>
