--- a/LanguageWeaverProvider/View/SettingsView.xaml
+++ b/LanguageWeaverProvider/View/SettingsView.xaml
@@ -4,10 +4,8 @@
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 			 xmlns:root="clr-namespace:LanguageWeaverProvider"
-			 xmlns:local="clr-namespace:LanguageWeaverProvider.View"
 			 xmlns:controls="clr-namespace:LanguageWeaverProvider.Controls"
 			 xmlns:viewModel="clr-namespace:LanguageWeaverProvider.ViewModel"
-			 xmlns:converters="clr-namespace:LanguageWeaverProvider.Converters"
 			 d:DataContext="{d:DesignInstance viewModel:SettingsViewModel}"
 			 mc:Ignorable="d"
 			 d:DesignHeight="450"
@@ -15,63 +13,65 @@
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="../Controls/ToggleOption.xaml" />
 				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/ButtonResources.xaml" />
-				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/CheckBoxResources.xaml" />
-				<ResourceDictionary Source="../Controls/WatermarkTextBoxResources.xaml" />
 			</ResourceDictionary.MergedDictionaries>
-			
-			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-
 		</ResourceDictionary>
 	</UserControl.Resources>
 
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
 
 		<Button Grid.Row="0"
 				Command="{Binding BackCommand}"
 				Style="{StaticResource Sdl.Button.SecondaryStyle}"
 				HorizontalAlignment="Left"
-				Width="88"
-				Margin="36 0 0 0">
+				Width="96"
+				Height="32"
+				Margin="32 0 16 4">
 			<Button.Content>
 				<StackPanel Orientation="Horizontal">
 					<TextBlock Text="{x:Static root:PluginResources.SettingsView_BackButton_LeftContent}"
-							   Margin="0 0 8 0"/>
+							   Margin="0 0 8 0" />
 					<TextBlock Text="{x:Static root:PluginResources.SettingsView_BackButton_RightContent}"
 							   Margin="8 0 0 0" />
 				</StackPanel>
 			</Button.Content>
 		</Button>
-		
-		<StackPanel Grid.Row="1"
-					Margin="72 32 72 0">
-			<CheckBox Content="{x:Static root:PluginResources.SettingsView_Drafts}"
-					  IsChecked="{Binding ResendDrafts}" 
-					  Style="{StaticResource Sdl.Checkbox.GenericStyle}"
-					  Margin="0 4"/>
 
-			<CheckBox Content="{x:Static root:PluginResources.SettingsView_Tags}"
-					  IsChecked="{Binding IncludeTags}"
-					  Style="{StaticResource Sdl.Checkbox.GenericStyle}" 
-					  Margin="0 4"/>
+		<ScrollViewer Grid.Row="1"
+					  VerticalScrollBarVisibility="Auto">
+			<StackPanel Margin="32 0">
+				<controls:ToggleOption Checked="{Binding UseCustomName, Mode=TwoWay}"
+									   CheckBoxContent="Friendly provider name"
+									   DescriptionText="When this option is active, the name of the provider will appear as 'Language Weaver - Custom name'."
+									   TextBoxVisible="True"
+									   TextBoxText="{Binding CustomName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+									   ButtonCommand="{Binding ClearCommand}"
+									   ButtonParameter="{controls:NameOf Member=CustomName, Type={x:Type viewModel:SettingsViewModel}}"
+									   Margin="0 4" />
 
-			<CheckBox Content="Use custom name"
-					  IsChecked="{Binding UseCustomName}"
-					  Style="{StaticResource Sdl.Checkbox.GenericStyle}"
-					  Margin="0 4" />
+				<controls:ToggleOption CheckBoxContent="Include tags in translation"
+									   DescriptionText="When this option is disabled, the segments will be sent for translation without tags and the Target Segments won't include any tag."
+									   TextBoxVisible="False"
+									   Checked="{Binding IncludeTags, Mode=TwoWay}"
+									   Margin="0 4" />
 
-			<TextBox Text="{Binding CustomName}"
-					 Style="{StaticResource WatermarkTextBox}"
-					 Visibility="{Binding UseCustomName, Converter={StaticResource BooleanToVisibilityConverter}}"
-					 controls:TextBoxWatermarkHelper.WatermarkText="Custom name"
-					 controls:TextBoxWatermarkHelper.IsWatermarkVisible="True"
-					 controls:TextBoxWatermarkHelper.ButtonCommand="{Binding ClearCommand}"
-					 controls:TextBoxWatermarkHelper.ButtonCommandParameter="{controls:NameOf Member=CustomName, Type={x:Type viewModel:SettingsViewModel}}" />
-		</StackPanel>
-		
+				<controls:ToggleOption CheckBoxContent="Resend drafts for translation"
+									   DescriptionText="When this option is disabled, the segments that are marked as Draft won't be sent to the Language Weaver service for translation."
+									   TextBoxVisible="False"
+									   Checked="{Binding ResendDrafts, Mode=TwoWay}"
+									   Margin="0 4" />
+
+				<controls:ToggleOption CheckBoxContent="Send feed-back on confirmed segments"
+									   DescriptionText="When this option is active, the segments that were translated using the Language Weaver service will automatically be sent for feed-back."
+									   TextBoxVisible="False"
+									   Checked="{Binding AutosendFeedback, Mode=TwoWay}"
+									   Margin="0 4" />
+			</StackPanel>
+		</ScrollViewer>
 	</Grid>
 </UserControl>
