--- a/AHK plugin/Sdl.Community.AhkPlugin/Ui/ScriptsWindow.xaml
+++ b/AHK plugin/Sdl.Community.AhkPlugin/Ui/ScriptsWindow.xaml
@@ -1,106 +1,163 @@
 ﻿<UserControl x:Class="Sdl.Community.AhkPlugin.Ui.ScriptsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModels="clr-namespace:Sdl.Community.AhkPlugin.ViewModels"
-		d:DataContext="{d:DesignInstance viewModels:ScriptsWindowViewModel}"
-        d:DesignHeight="500" d:DesignWidth="600"
-        mc:Ignorable="d">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="..\UiHelpers\Buttons.xaml"/>
-                <ResourceDictionary Source="..\UiHelpers\General.xaml"/>
-                <ResourceDictionary Source="..\UiHelpers\ButtonsStyle.xaml"/>
-                <ResourceDictionary Source="..\UiHelpers\DataGridStyle.xaml"/>
-                <ResourceDictionary Source="..\UiHelpers\TextBoxStyle.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <TextBox Style="{DynamicResource DescriptionBox}"  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="2" Margin="10,0,10,21" >The scripts available to you are listed below. You can add/remove or disable/enable scripts as well as export selected scripts to share with others.  To add new scripts either click on add to copy paste or type it in; 
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+			 xmlns:viewModels="clr-namespace:Sdl.Community.AhkPlugin.ViewModels"
+			 d:DataContext="{d:DesignInstance viewModels:ScriptsWindowViewModel}"
+			 d:DesignHeight="500"
+			 d:DesignWidth="600"
+			 mc:Ignorable="d">
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="..\UiHelpers\Buttons.xaml" />
+				<ResourceDictionary Source="..\UiHelpers\General.xaml" />
+				<ResourceDictionary Source="..\UiHelpers\ButtonsStyle.xaml" />
+				<ResourceDictionary Source="..\UiHelpers\DataGridStyle.xaml" />
+				<ResourceDictionary Source="..\UiHelpers\TextBoxStyle.xaml" />
+				<ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/DataGridResources.xaml" />
+			</ResourceDictionary.MergedDictionaries>
+		</ResourceDictionary>
+	</UserControl.Resources>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<Grid.ColumnDefinitions>
+			<ColumnDefinition Width="Auto" />
+			<ColumnDefinition Width="*" />
+		</Grid.ColumnDefinitions>
+		<TextBox Style="{DynamicResource DescriptionBox}"
+				 Grid.Column="0"
+				 Grid.Row="0"
+				 Grid.ColumnSpan="2"
+				 Margin="10,0,10,21">The scripts available to you are listed below. You can add/remove or disable/enable scripts as well as export selected scripts to share with others.  To add new scripts either click on add to copy paste or type it in; 
 			or use the import feature to import scripts that have been exported by others using this plugin.</TextBox>
-		<TextBlock  TextWrapping="Wrap" Grid.Column="0" Grid.ColumnSpan="2" Margin="10,60,10,15" Grid.Row="0" >
+		<TextBlock  TextWrapping="Wrap"
+					Grid.Column="0"
+					Grid.ColumnSpan="2"
+					Margin="10,60,10,15"
+					Grid.Row="0">
 				Master script is saved by default to C:\Users\[username]\AppData\Roaming\SDL Community\AhkMasterScript. To change the default path please click <Hyperlink Command="{Binding ChangeScriptPath}">here</Hyperlink> .
-        </TextBlock>
+		</TextBlock>
 
-        <StackPanel Grid.Column="0" Grid.Row="1" Margin="10,10,0,16" Orientation="Vertical">
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                <Button  Style="{DynamicResource SdlPrimaryButtonStyle}" Content="Export" Command="{Binding ExportCommand}" Margin="0,0,10,0" Width="70"/>
-                <Button  Style="{DynamicResource SdlPrimaryButtonStyle}" Content="Import" Command="{Binding ImportCommand}" Width="70"/>
-            </StackPanel>
-        </StackPanel>
-		<StackPanel Grid.Column="1" Grid.Row="1" Margin="10,10,0,16" Orientation="Vertical">
-			<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-				<Button  Style="{DynamicResource SdlDarkGreenButtonStyle}" Content="Remove" Command="{Binding RemoveScriptCommand}" Width="70" />
-				<Button Style="{DynamicResource SdlDarkGreenButtonStyle}" Content="Add" Command="{Binding AddCommand}" Margin="10,0,10,0" Width="70"/>
+		<StackPanel Grid.Column="0"
+					Grid.Row="1"
+					Margin="10,10,0,16"
+					Orientation="Vertical">
+			<StackPanel Orientation="Horizontal"
+						HorizontalAlignment="Right">
+				<Button  Style="{DynamicResource SdlPrimaryButtonStyle}"
+						 Content="Export"
+						 Command="{Binding ExportCommand}"
+						 Margin="0,0,10,0"
+						 Width="70" />
+				<Button  Style="{DynamicResource SdlPrimaryButtonStyle}"
+						 Content="Import"
+						 Command="{Binding ImportCommand}"
+						 Width="70" />
 			</StackPanel>
 		</StackPanel>
-		<DataGrid  
-			Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2"
-			BorderThickness="0"  Name="ScriptsDataGrid"
-			FontFamily="Segoe UI"
-		    SelectionMode="Extended"
-			Margin="0,0,10,10"
-			IsReadOnly="True"
-		    SelectionUnit="FullRow"
-		    Style="{StaticResource FilesGridStyle}"
-			MaxHeight="300"
-		    VerticalScrollBarVisibility="Auto"
-		    VerticalContentAlignment="Center"
-			ItemsSource="{Binding ScriptsCollection, Mode=TwoWay}"  Background="White"
-			GridLinesVisibility="None">
-				<DataGrid.RowStyle>
-					<Style TargetType="DataGridRow"  BasedOn="{StaticResource DgrStyle}">
-						<Setter Property="ToolTip">
-							<Setter.Value>
-								<TextBlock  TextWrapping="Wrap" Text="{Binding Description}"/>
-							</Setter.Value>
-						</Setter>
-						<Setter Property="TextElement.Foreground" Value="{Binding RowColor}"/>
-					</Style>
-				</DataGrid.RowStyle>
-				<DataGrid.Columns>
-					<DataGridTemplateColumn Width="Auto" CanUserResize="False">
-						<DataGridTemplateColumn.Header>
-							<CheckBox IsChecked="{Binding Path=DataContext.AllFilesChecked, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-						          VerticalContentAlignment="Center"
-						          Style="{StaticResource CheckBoxStyle}"
-						          Content="Select all"/>
-						</DataGridTemplateColumn.Header>
-						<DataGridTemplateColumn.CellTemplate>
-							<DataTemplate>
-								<CheckBox Style="{StaticResource CheckBoxStyle}" IsChecked="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-							          Margin="4,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-							</DataTemplate>
-						</DataGridTemplateColumn.CellTemplate>
-					</DataGridTemplateColumn>
-					<DataGridTextColumn Width="Auto" Header="File name" Binding="{Binding FileName}" IsReadOnly="True"/>
-					<DataGridTextColumn Width="auto" Header="Script name" Binding="{Binding Name}" />
-					<DataGridTextColumn Width="*" Header="Description" Binding="{Binding Description}" />
-					<DataGridTemplateColumn Width="150">
-						<DataGridTemplateColumn.CellTemplate>
-							<DataTemplate>
-								<StackPanel Orientation="Vertical" Width="auto">
-									<StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-										<Button Style="{DynamicResource BaseButtonStyle}" Content="{Binding ScriptStateAction}"  Command="{Binding Path=DataContext.ChangeScriptStateCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding }" />
-										<Button Style="{DynamicResource BaseButtonStyle}" Content="Edit"  Command="{Binding Path=DataContext.EditScriptCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding }" />
-									</StackPanel>
+		<StackPanel Grid.Column="1"
+					Grid.Row="1"
+					Margin="10,10,0,16"
+					Orientation="Vertical">
+			<StackPanel Orientation="Horizontal"
+						HorizontalAlignment="Right">
+				<Button  Style="{DynamicResource SdlDarkGreenButtonStyle}"
+						 Content="Remove"
+						 Command="{Binding RemoveScriptCommand}"
+						 Width="70" />
+				<Button Style="{DynamicResource SdlDarkGreenButtonStyle}"
+						Content="Add"
+						Command="{Binding AddCommand}"
+						Margin="10,0,10,0"
+						Width="70" />
+			</StackPanel>
+		</StackPanel>
+		<DataGrid Grid.Column="0"
+				  Grid.Row="2"
+				  Grid.ColumnSpan="2"
+				  BorderThickness="0"
+				  Name="ScriptsDataGrid"
+				  FontFamily="Segoe UI"
+				  SelectionMode="Extended"
+				  Margin="0,0,10,10"
+				  IsReadOnly="True"
+				  SelectionUnit="FullRow"
+				  Style="{StaticResource FilesGridStyle}"
+				  MaxHeight="300"
+				  VerticalScrollBarVisibility="Auto"
+				  VerticalContentAlignment="Center"
+				  ItemsSource="{Binding ScriptsCollection, Mode=TwoWay}"
+				  Background="White"
+				  GridLinesVisibility="None">
+			<DataGrid.RowStyle>
+				<Style TargetType="DataGridRow"
+					   BasedOn="{StaticResource DgrStyle}">
+					<Setter Property="ToolTip">
+						<Setter.Value>
+							<TextBlock  TextWrapping="Wrap"
+										Text="{Binding Description}" />
+						</Setter.Value>
+					</Setter>
+					<Setter Property="TextElement.Foreground"
+							Value="{Binding RowColor}" />
+				</Style>
+			</DataGrid.RowStyle>
+			<DataGrid.Columns>
+				<DataGridTemplateColumn Width="Auto"
+										CanUserResize="False">
+					<DataGridTemplateColumn.Header>
+						<CheckBox IsChecked="{Binding Path=DataContext.AllFilesChecked, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+								  VerticalContentAlignment="Center"
+								  Style="{StaticResource CheckBoxStyle}"
+								  Content="Select all" />
+					</DataGridTemplateColumn.Header>
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<CheckBox Style="{StaticResource CheckBoxStyle}"
+									  IsChecked="{Binding IsSelected, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+									  Margin="4,0,0,0"
+									  HorizontalAlignment="Left"
+									  VerticalAlignment="Center" />
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+				<DataGridTextColumn Width="Auto"
+									Header="File name"
+									Binding="{Binding FileName}"
+									IsReadOnly="True" />
+				<DataGridTextColumn Width="auto"
+									Header="Script name"
+									Binding="{Binding Name}" />
+				<DataGridTextColumn Width="*"
+									Header="Description"
+									Binding="{Binding Description}" />
+				<DataGridTemplateColumn Width="150">
+					<DataGridTemplateColumn.CellTemplate>
+						<DataTemplate>
+							<StackPanel Orientation="Vertical"
+										Width="auto">
+								<StackPanel Orientation="Horizontal"
+											HorizontalAlignment="Right">
+									<Button Style="{DynamicResource BaseButtonStyle}"
+											Content="{Binding ScriptStateAction}"
+											Command="{Binding Path=DataContext.ChangeScriptStateCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
+											CommandParameter="{Binding }" />
+									<Button Style="{DynamicResource BaseButtonStyle}"
+											Content="Edit"
+											Command="{Binding Path=DataContext.EditScriptCommand, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}"
+											CommandParameter="{Binding }" />
 								</StackPanel>
-							</DataTemplate>
-						</DataGridTemplateColumn.CellTemplate>
-					</DataGridTemplateColumn>
-				</DataGrid.Columns>
-			</DataGrid>
-    </Grid>
+							</StackPanel>
+						</DataTemplate>
+					</DataGridTemplateColumn.CellTemplate>
+				</DataGridTemplateColumn>
+			</DataGrid.Columns>
+		</DataGrid>
+	</Grid>
 </UserControl>
