--- a/LanguageWeaverProvider/View/ErrorDialogView.xaml
+++ b/LanguageWeaverProvider/View/ErrorDialogView.xaml
@@ -61,18 +61,29 @@
 				   TextWrapping="Wrap"
 				   Focusable="True"
 				   FontSize="20"
-				   Margin="48 32 0 0" />
-
-		<TextBlock Grid.Row="1"
+				   Margin="48 32 48 0" />
+		
+		<Separator Grid.Row="1"
 				   Grid.ColumnSpan="2"
-				   Text="{Binding ErrorMessage}"
-				   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
-				   HorizontalAlignment="Left"
 				   VerticalAlignment="Top"
-				   TextWrapping="Wrap"
-				   Focusable="True"
-				   FontSize="14"
-				   Margin="32 32 0 0" />
+				   Margin="0 16 0 0"/>
+
+		<ScrollViewer Grid.Row="1"
+					  Grid.ColumnSpan="2"
+					  Margin="32 32 32 16"
+					  VerticalScrollBarVisibility="Auto"
+					  VerticalAlignment="Center">
+			<TextBlock Grid.Row="1"
+					   Grid.ColumnSpan="2"
+					   Text="{Binding ErrorMessage}"
+					   Style="{StaticResource Sdl.TextBlock.GenericTextStyle}"
+					   HorizontalAlignment="Left"
+					   VerticalAlignment="Top"
+					   TextWrapping="Wrap"
+					   Focusable="True"
+					   FontSize="14"
+					   Margin="0 0 8 0" />
+		</ScrollViewer>
 
 		<Grid Grid.Row="2"
 			  Grid.Column="0"
