--- a/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
+++ b/LanguageWeaverProvider/View/Cloud/CloudCredentialsView.xaml
@@ -23,6 +23,21 @@
 			<converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 			<converters:EmptyStringToVisibilityConverter x:Key="EmptyStringToVisibilityConverter" />
 			<converters:RadioButtonCheckedConverter x:Key="RadioButtonCheckedConverter" />
+
+			<Style TargetType="ToolTip">
+				<Style.Resources>
+					<Style TargetType="ContentPresenter">
+						<Style.Resources>
+							<Style TargetType="TextBlock">
+								<Setter Property="TextWrapping"
+										Value="Wrap" />
+							</Style>
+						</Style.Resources>
+					</Style>
+				</Style.Resources>
+				<Setter Property="MaxWidth"
+						Value="320" />
+			</Style>
 		</ResourceDictionary>
 	</UserControl.Resources>
 
